--- a/BuyMeACoffee/package.json
+++ b/BuyMeACoffee/package.json
@@ -6,5 +6,9 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "hardhat": "^2.19.1"
+  },
+  "dependencies": {
+    "ether": "^0.0.9",
+    "ethers": "^6.9.0"
   }
 }
